--- a/src/css/_hover.css
+++ b/src/css/_hover.css
@@ -27,3 +27,9 @@
 .underline:focus {
   text-decoration: underline;
 }
+
+.tabs:hover,
+.tabs:focus {
+    background-color: hsl(158, 80%, 75%);
+    color: var(--hover-tabs);
+}
