--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -35,4 +35,6 @@
     --periwinkie: #e7ecff;
     --woodsmoke: #19160a;
     --colorlink: #1624f7;
+    --bgcTabs: #45d5a0;
+    --hoverTabs: #212843;
 }
