--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -692,7 +692,7 @@ path.q2-3 {
     font-weight: bold;
     vertical-align: middle;
     min-width: 260px;
-    height: 60vh;
+    min-height: 60vh;
     max-height: 450px;
     margin-top: 10px;
     border-radius: 5px;
@@ -812,4 +812,236 @@ path.q2-3 {
             fill-opacity: 1;
         }
     }
+}
+
+.bislai-grid {
+    position: relative;
+    width: 100%;
+}
+
+.bislai-grid-text {
+    position: absolute;
+    top: 20%;
+    right: 20px;
+    background-color: rgba(255, 255, 255, .8);
+    padding: 30px;
+    width: 40vw;
+}
+
+img {
+  width: 100%;
+}
+
+.retro {
+background-color: #f1e3a0;
+}
+
+.retro img {
+   mix-blend-mode: darken;
+  -webkit-filter: grayscale(100%) contrast(2);
+  filter: grayscale(100%) contrast(2);
+  width: 100%;
+}
+
+.retro:after {
+  background: linear-gradient(180deg, #f430a9, #f2e782);
+  mix-blend-mode: lighten;
+}
+
+.vintage {
+  background-color: #caeaf2;
+}
+
+.vintage img {
+   mix-blend-mode: multiply;
+  -webkit-filter: grayscale(100%) contrast(1.5);
+  filter: grayscale(100%) contrast(1.5);
+}
+
+.vintage:after {
+  background-color: #2cd6e1;
+  mix-blend-mode: lighten;
+}
+
+.blue-light {
+  background-color: #181e59;
+}
+
+.blue-light img {
+   mix-blend-mode: lighten;
+  -webkit-filter: grayscale(100%) contrast(.8);
+  filter: grayscale(100%) contrast(.8);
+}
+
+.blue-light:after {
+  background-color: #E7E1A6;
+  mix-blend-mode: multiply;
+}
+
+.blue {
+  background-color: #77acd4;
+}
+
+.blue img {
+   mix-blend-mode: multiply;
+  -webkit-filter: grayscale(100%) contrast(1.2);
+  filter: grayscale(100%) contrast(1.2);
+}
+
+.blue:after {
+  background-color: #033dc5;
+  mix-blend-mode: lighten;
+}
+
+.dark-red {
+  background-color: #ed060b;
+}
+
+.dark-red img {
+    -webkit-filter: grayscale(100%) contrast(1.2);
+    filter: grayscale(100%) contrast(1.2);
+    mix-blend-mode: lighten;
+}
+
+.dark-red:after {
+   background-color: #70e4ee;
+   mix-blend-mode: multiply;
+}
+
+.flat-retro {
+  background-color: #FCA300;
+}
+
+.flat-retro img {
+   mix-blend-mode: darken;
+  -webkit-filter: grayscale(100%) contrast(1.5);
+  filter: grayscale(100%) contrast(1.5);
+}
+
+.flat-retro:after {
+   background-color: #e23241;
+  mix-blend-mode: lighten;
+}
+
+.teal {
+  background-color: #d7a621;
+}
+
+.teal img {
+   mix-blend-mode: multiply;
+  -webkit-filter: grayscale(100%) contrast(1.2);
+  filter: grayscale(100%) contrast(1.2);
+}
+
+.teal:after {
+  background-color: #0c6249;
+  mix-blend-mode: lighten;
+}
+
+.purple {
+  background-color: #88169d;
+}
+
+.purple img {
+  -webkit-filter: grayscale(100%) contrast(1.2);
+    filter: grayscale(100%) contrast(1.2);
+  mix-blend-mode: lighten;
+}
+
+.purple:after {
+  mix-blend-mode: hard-light;
+  background: linear-gradient(to top left, #75d775, #321a5b);
+}
+
+.pink {
+  background-color: #FCA300;
+}
+
+.pink img {
+  mix-blend-mode: darken;
+}
+
+.pink::after {
+  background: #282581;
+  mix-blend-mode: lighten;
+  -webkit-filter: contrast(1.1);
+  filter: contrast(1.1);
+}
+
+.pink::before {
+  opacity: .4;
+  width: 100%;
+  height: 100%;
+}
+
+.yellow {
+  background-color: #e0de2c;
+}
+
+.yellow img {
+   mix-blend-mode: multiply;
+  -webkit-filter: grayscale(100%) contrast(.8);
+  filter: grayscale(100%) contrast(.8);
+}
+
+.yellow:after {
+  background-color: #b71310;
+  mix-blend-mode: lighten;
+}
+
+.orange {
+  background-color: #f65e35;
+}
+
+.orange img {
+   mix-blend-mode: multiply;
+  -webkit-filter: grayscale(100%) contrast(1.2);
+  filter: grayscale(100%) contrast(1.2);
+}
+
+.orange:after {
+  background-color: #1e3265;
+  mix-blend-mode: lighten;
+}
+
+.blue-red {
+  background-color: #E50914;
+}
+
+.blue-red img {
+  -webkit-filter: grayscale(100%) contrast(1.2);
+    filter: grayscale(100%) contrast(1.2);
+  opacity: .8;
+}
+
+.blue-red:after {
+   mix-blend-mode: lighten;
+    -webkit-filter: contrast(1.1);
+    filter: contrast(1.1);
+  background-color: #282581;
+}
+
+.gold {
+  background-color: #367ABD;
+}
+
+.gold img {
+   mix-blend-mode: lighten;
+  -webkit-filter: grayscale(100%) contrast(1);
+  filter: grayscale(100%) contrast(.8);
+}
+
+.gold:after {
+  background-color: #F9ED3A;
+  mix-blend-mode: multiply;
+}
+
+.column:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    transition: all ease-in-out .5s;
 }
